// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<App /> > App mounts properly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <style
        data-mantine-styles="classes"
      >
        @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
      </style>
      <div
        class="_card_4811cd m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
        data-with-border="true"
        style="--paper-radius: var(--mantine-radius-md); --card-padding: var(--mantine-spacing-xl);"
      >
        <div
          class="m_599a2148 mantine-Card-section"
          data-first-section="true"
        />
        <div
          class="_avatar_4811cd m_f85678b6 mantine-Avatar-root"
          style="--avatar-size: calc(5rem * var(--mantine-scale)); --avatar-radius: calc(5rem * var(--mantine-scale)); --avatar-bg: var(--mantine-color-blue-light); --avatar-color: var(--mantine-color-blue-light-color); --avatar-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        >
          <span
            class="m_104cd71f mantine-Avatar-placeholder"
          >
            <svg
              data-avatar-placeholder-icon="true"
              fill="none"
              viewBox="0 0 15 15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M0.877014 7.49988C0.877014 3.84219 3.84216 0.877045 7.49985 0.877045C11.1575 0.877045 14.1227 3.84219 14.1227 7.49988C14.1227 11.1575 11.1575 14.1227 7.49985 14.1227C3.84216 14.1227 0.877014 11.1575 0.877014 7.49988ZM7.49985 1.82704C4.36683 1.82704 1.82701 4.36686 1.82701 7.49988C1.82701 8.97196 2.38774 10.3131 3.30727 11.3213C4.19074 9.94119 5.73818 9.02499 7.50023 9.02499C9.26206 9.02499 10.8093 9.94097 11.6929 11.3208C12.6121 10.3127 13.1727 8.97172 13.1727 7.49988C13.1727 4.36686 10.6328 1.82704 7.49985 1.82704ZM10.9818 11.9787C10.2839 10.7795 8.9857 9.97499 7.50023 9.97499C6.01458 9.97499 4.71624 10.7797 4.01845 11.9791C4.97952 12.7272 6.18765 13.1727 7.49985 13.1727C8.81227 13.1727 10.0206 12.727 10.9818 11.9787ZM5.14999 6.50487C5.14999 5.207 6.20212 4.15487 7.49999 4.15487C8.79786 4.15487 9.84999 5.207 9.84999 6.50487C9.84999 7.80274 8.79786 8.85487 7.49999 8.85487C6.20212 8.85487 5.14999 7.80274 5.14999 6.50487ZM7.49999 5.10487C6.72679 5.10487 6.09999 5.73167 6.09999 6.50487C6.09999 7.27807 6.72679 7.90487 7.49999 7.90487C8.27319 7.90487 8.89999 7.27807 8.89999 6.50487C8.89999 5.73167 8.27319 5.10487 7.49999 5.10487Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <p
          class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
          style="margin-top: var(--mantine-spacing-sm); font-size: var(--mantine-font-size-lg); font-weight: 500; text-align: center;"
        />
        <p
          class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
          style="color: var(--mantine-color-dimmed); font-size: var(--mantine-font-size-sm); text-align: center;"
        />
        <div
          class="m_4081bf90 mantine-Group-root"
          style="--group-gap: calc(1.875rem * var(--mantine-scale)); --group-align: center; --group-justify: center; --group-wrap: wrap; margin-top: var(--mantine-spacing-md);"
        >
          <div>
            <p
              class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
              style="font-size: var(--mantine-font-size-lg); font-weight: 500; text-align: center;"
            />
            <p
              class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
              style="color: var(--mantine-color-dimmed); font-size: var(--mantine-font-size-sm); text-align: center; line-height: 1;"
            >
              Deployments
            </p>
          </div>
          <div>
            <p
              class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
              style="font-size: var(--mantine-font-size-lg); font-weight: 500; text-align: center;"
            />
            <p
              class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
              style="color: var(--mantine-color-dimmed); font-size: var(--mantine-font-size-sm); text-align: center; line-height: 1;"
            >
              Releases
            </p>
          </div>
        </div>
        <div
          class="m_8bffd616 mantine-Flex-root __m__-ra"
          style="align-items: center; justify-content: space-between;"
        >
          <button
            class="mantine-focus-auto mantine-active m_77c9d27d mantine-Button-root m_87cf2631 mantine-UnstyledButton-root"
            data-block="true"
            data-size="md"
            style="--button-height: var(--button-height-md); --button-padding-x: var(--button-padding-x-md); --button-fz: var(--mantine-font-size-md); --button-radius: var(--mantine-radius-md); --button-color: var(--mantine-color-white); margin-top: var(--mantine-spacing-xl);"
            type="button"
          >
            <span
              class="m_80f1301b mantine-Button-inner"
            >
              <span
                class="m_811560b9 mantine-Button-label"
              >
                Go To App
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <style
      data-mantine-styles="classes"
    >
      @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
    </style>
    <div
      class="_card_4811cd m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      data-with-border="true"
      style="--paper-radius: var(--mantine-radius-md); --card-padding: var(--mantine-spacing-xl);"
    >
      <div
        class="m_599a2148 mantine-Card-section"
        data-first-section="true"
      />
      <div
        class="_avatar_4811cd m_f85678b6 mantine-Avatar-root"
        style="--avatar-size: calc(5rem * var(--mantine-scale)); --avatar-radius: calc(5rem * var(--mantine-scale)); --avatar-bg: var(--mantine-color-blue-light); --avatar-color: var(--mantine-color-blue-light-color); --avatar-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
      >
        <span
          class="m_104cd71f mantine-Avatar-placeholder"
        >
          <svg
            data-avatar-placeholder-icon="true"
            fill="none"
            viewBox="0 0 15 15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M0.877014 7.49988C0.877014 3.84219 3.84216 0.877045 7.49985 0.877045C11.1575 0.877045 14.1227 3.84219 14.1227 7.49988C14.1227 11.1575 11.1575 14.1227 7.49985 14.1227C3.84216 14.1227 0.877014 11.1575 0.877014 7.49988ZM7.49985 1.82704C4.36683 1.82704 1.82701 4.36686 1.82701 7.49988C1.82701 8.97196 2.38774 10.3131 3.30727 11.3213C4.19074 9.94119 5.73818 9.02499 7.50023 9.02499C9.26206 9.02499 10.8093 9.94097 11.6929 11.3208C12.6121 10.3127 13.1727 8.97172 13.1727 7.49988C13.1727 4.36686 10.6328 1.82704 7.49985 1.82704ZM10.9818 11.9787C10.2839 10.7795 8.9857 9.97499 7.50023 9.97499C6.01458 9.97499 4.71624 10.7797 4.01845 11.9791C4.97952 12.7272 6.18765 13.1727 7.49985 13.1727C8.81227 13.1727 10.0206 12.727 10.9818 11.9787ZM5.14999 6.50487C5.14999 5.207 6.20212 4.15487 7.49999 4.15487C8.79786 4.15487 9.84999 5.207 9.84999 6.50487C9.84999 7.80274 8.79786 8.85487 7.49999 8.85487C6.20212 8.85487 5.14999 7.80274 5.14999 6.50487ZM7.49999 5.10487C6.72679 5.10487 6.09999 5.73167 6.09999 6.50487C6.09999 7.27807 6.72679 7.90487 7.49999 7.90487C8.27319 7.90487 8.89999 7.27807 8.89999 6.50487C8.89999 5.73167 8.27319 5.10487 7.49999 5.10487Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
      <p
        class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
        style="margin-top: var(--mantine-spacing-sm); font-size: var(--mantine-font-size-lg); font-weight: 500; text-align: center;"
      />
      <p
        class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
        style="color: var(--mantine-color-dimmed); font-size: var(--mantine-font-size-sm); text-align: center;"
      />
      <div
        class="m_4081bf90 mantine-Group-root"
        style="--group-gap: calc(1.875rem * var(--mantine-scale)); --group-align: center; --group-justify: center; --group-wrap: wrap; margin-top: var(--mantine-spacing-md);"
      >
        <div>
          <p
            class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
            style="font-size: var(--mantine-font-size-lg); font-weight: 500; text-align: center;"
          />
          <p
            class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
            style="color: var(--mantine-color-dimmed); font-size: var(--mantine-font-size-sm); text-align: center; line-height: 1;"
          >
            Deployments
          </p>
        </div>
        <div>
          <p
            class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
            style="font-size: var(--mantine-font-size-lg); font-weight: 500; text-align: center;"
          />
          <p
            class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
            style="color: var(--mantine-color-dimmed); font-size: var(--mantine-font-size-sm); text-align: center; line-height: 1;"
          >
            Releases
          </p>
        </div>
      </div>
      <div
        class="m_8bffd616 mantine-Flex-root __m__-ra"
        style="align-items: center; justify-content: space-between;"
      >
        <button
          class="mantine-focus-auto mantine-active m_77c9d27d mantine-Button-root m_87cf2631 mantine-UnstyledButton-root"
          data-block="true"
          data-size="md"
          style="--button-height: var(--button-height-md); --button-padding-x: var(--button-padding-x-md); --button-fz: var(--mantine-font-size-md); --button-radius: var(--mantine-radius-md); --button-color: var(--mantine-color-white); margin-top: var(--mantine-spacing-xl);"
          type="button"
        >
          <span
            class="m_80f1301b mantine-Button-inner"
          >
            <span
              class="m_811560b9 mantine-Button-label"
            >
              Go To App
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<AppCard /> > AppCard mounts properly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <style
        data-mantine-styles="classes"
      >
        @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
      </style>
      <div
        class="_card_4811cd m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
        data-with-border="true"
        style="--paper-radius: var(--mantine-radius-md); --card-padding: var(--mantine-spacing-xl);"
      >
        <div
          class="m_599a2148 mantine-Card-section"
          data-first-section="true"
        />
        <div
          class="_avatar_4811cd m_f85678b6 mantine-Avatar-root"
          style="--avatar-size: calc(5rem * var(--mantine-scale)); --avatar-radius: calc(5rem * var(--mantine-scale)); --avatar-bg: var(--mantine-color-blue-light); --avatar-color: var(--mantine-color-blue-light-color); --avatar-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        >
          <span
            class="m_104cd71f mantine-Avatar-placeholder"
          >
            <svg
              data-avatar-placeholder-icon="true"
              fill="none"
              viewBox="0 0 15 15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M0.877014 7.49988C0.877014 3.84219 3.84216 0.877045 7.49985 0.877045C11.1575 0.877045 14.1227 3.84219 14.1227 7.49988C14.1227 11.1575 11.1575 14.1227 7.49985 14.1227C3.84216 14.1227 0.877014 11.1575 0.877014 7.49988ZM7.49985 1.82704C4.36683 1.82704 1.82701 4.36686 1.82701 7.49988C1.82701 8.97196 2.38774 10.3131 3.30727 11.3213C4.19074 9.94119 5.73818 9.02499 7.50023 9.02499C9.26206 9.02499 10.8093 9.94097 11.6929 11.3208C12.6121 10.3127 13.1727 8.97172 13.1727 7.49988C13.1727 4.36686 10.6328 1.82704 7.49985 1.82704ZM10.9818 11.9787C10.2839 10.7795 8.9857 9.97499 7.50023 9.97499C6.01458 9.97499 4.71624 10.7797 4.01845 11.9791C4.97952 12.7272 6.18765 13.1727 7.49985 13.1727C8.81227 13.1727 10.0206 12.727 10.9818 11.9787ZM5.14999 6.50487C5.14999 5.207 6.20212 4.15487 7.49999 4.15487C8.79786 4.15487 9.84999 5.207 9.84999 6.50487C9.84999 7.80274 8.79786 8.85487 7.49999 8.85487C6.20212 8.85487 5.14999 7.80274 5.14999 6.50487ZM7.49999 5.10487C6.72679 5.10487 6.09999 5.73167 6.09999 6.50487C6.09999 7.27807 6.72679 7.90487 7.49999 7.90487C8.27319 7.90487 8.89999 7.27807 8.89999 6.50487C8.89999 5.73167 8.27319 5.10487 7.49999 5.10487Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <p
          class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
          style="margin-top: var(--mantine-spacing-sm); font-size: var(--mantine-font-size-lg); font-weight: 500; text-align: center;"
        />
        <p
          class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
          style="color: var(--mantine-color-dimmed); font-size: var(--mantine-font-size-sm); text-align: center;"
        />
        <div
          class="m_4081bf90 mantine-Group-root"
          style="--group-gap: calc(1.875rem * var(--mantine-scale)); --group-align: center; --group-justify: center; --group-wrap: wrap; margin-top: var(--mantine-spacing-md);"
        >
          <div>
            <p
              class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
              style="font-size: var(--mantine-font-size-lg); font-weight: 500; text-align: center;"
            />
            <p
              class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
              style="color: var(--mantine-color-dimmed); font-size: var(--mantine-font-size-sm); text-align: center; line-height: 1;"
            >
              Deployments
            </p>
          </div>
          <div>
            <p
              class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
              style="font-size: var(--mantine-font-size-lg); font-weight: 500; text-align: center;"
            />
            <p
              class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
              style="color: var(--mantine-color-dimmed); font-size: var(--mantine-font-size-sm); text-align: center; line-height: 1;"
            >
              Releases
            </p>
          </div>
        </div>
        <div
          class="m_8bffd616 mantine-Flex-root __m__-ra"
          style="align-items: center; justify-content: space-between;"
        >
          <button
            class="mantine-focus-auto mantine-active m_77c9d27d mantine-Button-root m_87cf2631 mantine-UnstyledButton-root"
            data-block="true"
            data-size="md"
            style="--button-height: var(--button-height-md); --button-padding-x: var(--button-padding-x-md); --button-fz: var(--mantine-font-size-md); --button-radius: var(--mantine-radius-md); --button-color: var(--mantine-color-white); margin-top: var(--mantine-spacing-xl);"
            type="button"
          >
            <span
              class="m_80f1301b mantine-Button-inner"
            >
              <span
                class="m_811560b9 mantine-Button-label"
              >
                Go To App
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <style
      data-mantine-styles="classes"
    >
      @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
    </style>
    <div
      class="_card_4811cd m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      data-with-border="true"
      style="--paper-radius: var(--mantine-radius-md); --card-padding: var(--mantine-spacing-xl);"
    >
      <div
        class="m_599a2148 mantine-Card-section"
        data-first-section="true"
      />
      <div
        class="_avatar_4811cd m_f85678b6 mantine-Avatar-root"
        style="--avatar-size: calc(5rem * var(--mantine-scale)); --avatar-radius: calc(5rem * var(--mantine-scale)); --avatar-bg: var(--mantine-color-blue-light); --avatar-color: var(--mantine-color-blue-light-color); --avatar-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
      >
        <span
          class="m_104cd71f mantine-Avatar-placeholder"
        >
          <svg
            data-avatar-placeholder-icon="true"
            fill="none"
            viewBox="0 0 15 15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M0.877014 7.49988C0.877014 3.84219 3.84216 0.877045 7.49985 0.877045C11.1575 0.877045 14.1227 3.84219 14.1227 7.49988C14.1227 11.1575 11.1575 14.1227 7.49985 14.1227C3.84216 14.1227 0.877014 11.1575 0.877014 7.49988ZM7.49985 1.82704C4.36683 1.82704 1.82701 4.36686 1.82701 7.49988C1.82701 8.97196 2.38774 10.3131 3.30727 11.3213C4.19074 9.94119 5.73818 9.02499 7.50023 9.02499C9.26206 9.02499 10.8093 9.94097 11.6929 11.3208C12.6121 10.3127 13.1727 8.97172 13.1727 7.49988C13.1727 4.36686 10.6328 1.82704 7.49985 1.82704ZM10.9818 11.9787C10.2839 10.7795 8.9857 9.97499 7.50023 9.97499C6.01458 9.97499 4.71624 10.7797 4.01845 11.9791C4.97952 12.7272 6.18765 13.1727 7.49985 13.1727C8.81227 13.1727 10.0206 12.727 10.9818 11.9787ZM5.14999 6.50487C5.14999 5.207 6.20212 4.15487 7.49999 4.15487C8.79786 4.15487 9.84999 5.207 9.84999 6.50487C9.84999 7.80274 8.79786 8.85487 7.49999 8.85487C6.20212 8.85487 5.14999 7.80274 5.14999 6.50487ZM7.49999 5.10487C6.72679 5.10487 6.09999 5.73167 6.09999 6.50487C6.09999 7.27807 6.72679 7.90487 7.49999 7.90487C8.27319 7.90487 8.89999 7.27807 8.89999 6.50487C8.89999 5.73167 8.27319 5.10487 7.49999 5.10487Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
      <p
        class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
        style="margin-top: var(--mantine-spacing-sm); font-size: var(--mantine-font-size-lg); font-weight: 500; text-align: center;"
      />
      <p
        class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
        style="color: var(--mantine-color-dimmed); font-size: var(--mantine-font-size-sm); text-align: center;"
      />
      <div
        class="m_4081bf90 mantine-Group-root"
        style="--group-gap: calc(1.875rem * var(--mantine-scale)); --group-align: center; --group-justify: center; --group-wrap: wrap; margin-top: var(--mantine-spacing-md);"
      >
        <div>
          <p
            class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
            style="font-size: var(--mantine-font-size-lg); font-weight: 500; text-align: center;"
          />
          <p
            class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
            style="color: var(--mantine-color-dimmed); font-size: var(--mantine-font-size-sm); text-align: center; line-height: 1;"
          >
            Deployments
          </p>
        </div>
        <div>
          <p
            class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
            style="font-size: var(--mantine-font-size-lg); font-weight: 500; text-align: center;"
          />
          <p
            class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
            style="color: var(--mantine-color-dimmed); font-size: var(--mantine-font-size-sm); text-align: center; line-height: 1;"
          >
            Releases
          </p>
        </div>
      </div>
      <div
        class="m_8bffd616 mantine-Flex-root __m__-ra"
        style="align-items: center; justify-content: space-between;"
      >
        <button
          class="mantine-focus-auto mantine-active m_77c9d27d mantine-Button-root m_87cf2631 mantine-UnstyledButton-root"
          data-block="true"
          data-size="md"
          style="--button-height: var(--button-height-md); --button-padding-x: var(--button-padding-x-md); --button-fz: var(--mantine-font-size-md); --button-radius: var(--mantine-radius-md); --button-color: var(--mantine-color-white); margin-top: var(--mantine-spacing-xl);"
          type="button"
        >
          <span
            class="m_80f1301b mantine-Button-inner"
          >
            <span
              class="m_811560b9 mantine-Button-label"
            >
              Go To App
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<AppCard /> > AppCard mounts properly and matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <style
        data-mantine-styles="classes"
      >
        @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
      </style>
      <div
        class="_card_4811cd m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
        data-with-border="true"
        style="--paper-radius: var(--mantine-radius-md); --card-padding: var(--mantine-spacing-xl);"
      >
        <div
          class="m_599a2148 mantine-Card-section"
          data-first-section="true"
        />
        <div
          class="_avatar_4811cd m_f85678b6 mantine-Avatar-root"
          style="--avatar-size: calc(5rem * var(--mantine-scale)); --avatar-radius: calc(5rem * var(--mantine-scale)); --avatar-bg: var(--mantine-color-teal-light); --avatar-color: var(--mantine-color-teal-light-color); --avatar-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        >
          <span
            class="m_104cd71f mantine-Avatar-placeholder"
          >
            SA
          </span>
        </div>
        <p
          class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
          style="margin-top: var(--mantine-spacing-sm); font-size: var(--mantine-font-size-lg); font-weight: 500; text-align: center;"
        >
          Sample App
        </p>
        <p
          class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
          style="color: var(--mantine-color-dimmed); font-size: var(--mantine-font-size-sm); text-align: center;"
        >
          This is a sample app description.
        </p>
        <div
          class="m_4081bf90 mantine-Group-root"
          style="--group-gap: calc(1.875rem * var(--mantine-scale)); --group-align: center; --group-justify: center; --group-wrap: wrap; margin-top: var(--mantine-spacing-md);"
        >
          <div>
            <p
              class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
              style="font-size: var(--mantine-font-size-lg); font-weight: 500; text-align: center;"
            >
              10
            </p>
            <p
              class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
              style="color: var(--mantine-color-dimmed); font-size: var(--mantine-font-size-sm); text-align: center; line-height: 1;"
            >
              Deployments
            </p>
          </div>
          <div>
            <p
              class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
              style="font-size: var(--mantine-font-size-lg); font-weight: 500; text-align: center;"
            >
              5
            </p>
            <p
              class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
              style="color: var(--mantine-color-dimmed); font-size: var(--mantine-font-size-sm); text-align: center; line-height: 1;"
            >
              Releases
            </p>
          </div>
        </div>
        <div
          class="m_8bffd616 mantine-Flex-root __m__-ra"
          style="align-items: center; justify-content: space-between;"
        >
          <button
            class="mantine-focus-auto mantine-active m_77c9d27d mantine-Button-root m_87cf2631 mantine-UnstyledButton-root"
            data-block="true"
            data-size="md"
            style="--button-height: var(--button-height-md); --button-padding-x: var(--button-padding-x-md); --button-fz: var(--mantine-font-size-md); --button-radius: var(--mantine-radius-md); --button-color: var(--mantine-color-white); margin-top: var(--mantine-spacing-xl);"
            type="button"
          >
            <span
              class="m_80f1301b mantine-Button-inner"
            >
              <span
                class="m_811560b9 mantine-Button-label"
              >
                Go To App
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <style
      data-mantine-styles="classes"
    >
      @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
    </style>
    <div
      class="_card_4811cd m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      data-with-border="true"
      style="--paper-radius: var(--mantine-radius-md); --card-padding: var(--mantine-spacing-xl);"
    >
      <div
        class="m_599a2148 mantine-Card-section"
        data-first-section="true"
      />
      <div
        class="_avatar_4811cd m_f85678b6 mantine-Avatar-root"
        style="--avatar-size: calc(5rem * var(--mantine-scale)); --avatar-radius: calc(5rem * var(--mantine-scale)); --avatar-bg: var(--mantine-color-teal-light); --avatar-color: var(--mantine-color-teal-light-color); --avatar-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
      >
        <span
          class="m_104cd71f mantine-Avatar-placeholder"
        >
          SA
        </span>
      </div>
      <p
        class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
        style="margin-top: var(--mantine-spacing-sm); font-size: var(--mantine-font-size-lg); font-weight: 500; text-align: center;"
      >
        Sample App
      </p>
      <p
        class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
        style="color: var(--mantine-color-dimmed); font-size: var(--mantine-font-size-sm); text-align: center;"
      >
        This is a sample app description.
      </p>
      <div
        class="m_4081bf90 mantine-Group-root"
        style="--group-gap: calc(1.875rem * var(--mantine-scale)); --group-align: center; --group-justify: center; --group-wrap: wrap; margin-top: var(--mantine-spacing-md);"
      >
        <div>
          <p
            class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
            style="font-size: var(--mantine-font-size-lg); font-weight: 500; text-align: center;"
          >
            10
          </p>
          <p
            class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
            style="color: var(--mantine-color-dimmed); font-size: var(--mantine-font-size-sm); text-align: center; line-height: 1;"
          >
            Deployments
          </p>
        </div>
        <div>
          <p
            class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
            style="font-size: var(--mantine-font-size-lg); font-weight: 500; text-align: center;"
          >
            5
          </p>
          <p
            class="mantine-focus-auto m_b6d8b162 mantine-Text-root"
            style="color: var(--mantine-color-dimmed); font-size: var(--mantine-font-size-sm); text-align: center; line-height: 1;"
          >
            Releases
          </p>
        </div>
      </div>
      <div
        class="m_8bffd616 mantine-Flex-root __m__-ra"
        style="align-items: center; justify-content: space-between;"
      >
        <button
          class="mantine-focus-auto mantine-active m_77c9d27d mantine-Button-root m_87cf2631 mantine-UnstyledButton-root"
          data-block="true"
          data-size="md"
          style="--button-height: var(--button-height-md); --button-padding-x: var(--button-padding-x-md); --button-fz: var(--mantine-font-size-md); --button-radius: var(--mantine-radius-md); --button-color: var(--mantine-color-white); margin-top: var(--mantine-spacing-xl);"
          type="button"
        >
          <span
            class="m_80f1301b mantine-Button-inner"
          >
            <span
              class="m_811560b9 mantine-Button-label"
            >
              Go To App
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
